test/fail/UselessAbstractAbstract.agda
module UselessAbstractAbstract where

A : Set₁
abstract
  abstract
    A = Set
